--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,13 +12,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11.0.7
       uses: actions/setup-java@v1
       with:
-        java-version: '11.0.7'
+        java-version: 11.0.7
     - name: Build with Maven
       run: mvn -B package --file pom.xml
