--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,20 +5,22 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11.0.7
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11.0.7
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11.0.7
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.7
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+        env:
+SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
